--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -16,11 +16,11 @@ jobs:
         sudo apt install -y tar xz-utils wget
 
         # Build
-        mkdir -p ./dist
         ./build.sh
 
         # Move to dist
-        cp ./build/src/aria2 dist
+        mkdir -p ./dist
+        cp ./build/aria2/src/aria2c dist
 
     - name: Set permissions for dist directory
       run: |
